Agregando clase MetodoPago para el usuario